--- a/notebooks/lecture_6_spacy.ipynb
+++ b/notebooks/lecture_6_spacy.ipynb
@@ -38,7 +38,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 2307k    0 2307k    0     0  4044k      0 --:--:-- --:--:-- --:--:-- 4090k\n"
+      "100 2307k    0 2307k    0     0  2547k      0 --:--:-- --:--:-- --:--:-- 2563k\n"
      ]
     }
    ],
@@ -402,6 +402,26 @@
    ],
    "source": [
     "pd.DataFrame(data=winfo, columns=['word','part of speech', 'stop word'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entities\n",
+    "You can access the named entities recognized in a Doc object by iterating through the .ents attribute. \n",
+    "Entity Labels:\n",
+    "\n",
+    "Each entity recognized by spaCy is associated with a label that indicates the type of entity it represents. Common entity labels include:\n",
+    "\n",
+    "PERSON: Person names. <br>\n",
+    "ORG: Organizations. <br>\n",
+    "GPE: Geopolitical entities (e.g., countries, cities). <br>\n",
+    "DATE: Dates and times. <br>\n",
+    "MONEY: Currency amounts. <br>\n",
+    "PERCENT: Percentage values. <br>\n",
+    "PRODUCT: Product names. <br>\n",
+    "And many more."
    ]
   },
   {
@@ -946,7 +966,7 @@
    "source": [
     "## Exercise\n",
     "\n",
-    "Extract any word in the TSLA doc that is a number per Spacy. See [Spacy 101](https://spacy.io/usage/spacy-101). Your output should look like (assuming you used `doc = nlp(tsla[0:5000])`):\n",
+    "Extract any word in the TSLA doc that is a number per Spacy. Your output should look like (assuming you used `doc = nlp(tsla[0:5000])`):\n",
     "\n",
     "```\n",
     "[1, 29, 2010, 20549, 1933, 3711, 91, 2197729, 3500, 94304, 650, 413, 4000, 3500, 94304, 650, 413, 4000, 650, 94304, 650, 493, 9300, 2550, 94304, 650, 251, 5000, 415, one, 0.001, 100,000,000, 7,130, 1, 457, 1933, 2, 1933, 29, 2010]\n",
