moving content around

--- a/notebooks/lecture_8_selenium.ipynb
+++ b/notebooks/lecture_8_selenium.ipynb
@@ -326,7 +326,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "driver = webdriver.Chrome()\n",
+    "driver.maximize_window()\n",
+    "driver.get(website)\n",
+    "\n",
+    "container = driver.find_element(By.XPATH, '//div[@class=\"buttons-container\"]')\n",
+    "buttons = container.find_elements(By.XPATH, './/div/a')\n",
+    "buttons[0].click()"
+   ]
   }
  ],
  "metadata": {
