--- a/notebooks/lecture_8_selenium.ipynb
+++ b/notebooks/lecture_8_selenium.ipynb
@@ -4,18 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro to Selenium"
+    "# Intro to Selenium\n",
+    "`! pip install selenium` <br>\n",
+    "`! pip install webdriver-manager`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.support.ui import Select\n",
     "from selenium.webdriver.common.by import By\n",
     "import time\n",
     "import pathlib\n",
@@ -40,7 +45,7 @@
    "source": [
     "website = \"https://www.usfca.edu/\"\n",
     "# Create a WebDriver instance for Chrome\n",
-    "driver = webdriver.Chrome()\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install())\n",
     "driver.maximize_window()\n",
     "# Visit the website\n",
     "driver.get(website)"
@@ -303,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -323,18 +328,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 71,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "website = \"https://ecommerce-playground.lambdatest.io/index.php?route=account/register\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome()\n",
     "driver.maximize_window()\n",
-    "driver.get(website)\n",
-    "\n",
-    "container = driver.find_element(By.XPATH, '//div[@class=\"buttons-container\"]')\n",
-    "buttons = container.find_elements(By.XPATH, './/div/a')\n",
-    "buttons[0].click()"
+    "driver.get(website)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "firstname = driver.find_element(By.XPATH, '//input[@id=\"input-firstname\"]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "firstname.send_keys(\"Yan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# or use By.ID\n",
+    "lastname = driver.find_element(By.ID, \"input-lastname\")\n",
+    "telephone = driver.find_element(By.ID, \"input-telephone\")\n",
+    "email = driver.find_element(By.ID, \"input-email\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lastname.send_keys(\"INT\")\n",
+    "email.send_keys(\"hi@gmail.com\")\n",
+    "telephone.send_keys(\"+16002005000\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "password = driver.find_element(By.ID, \"input-password\")\n",
+    "password_confirm = driver.find_element(By.ID, \"input-confirm\")\n",
+    "password.send_keys(\"myUsefulPass\")\n",
+    "password_confirm.send_keys(\"myUsefulPass\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "newsletter = driver.find_element(By.XPATH, value=\"//label[@for='input-newsletter-yes']\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "newsletter.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
