--- a/notebooks/lecture_8_selenium.ipynb
+++ b/notebooks/lecture_8_selenium.ipynb
@@ -437,6 +437,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "terms = driver.find_element(By.XPATH, value=\"//label[@for='input-agree']\")\n",
+    "terms.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "continue_button = driver.find_element(By.XPATH, value=\"//input[@value='Continue']\")\n",
+    "continue_button.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
