--- a/notebooks/lecture_8_selenium.ipynb
+++ b/notebooks/lecture_8_selenium.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -45,7 +45,7 @@
    "source": [
     "website = \"https://www.usfca.edu/\"\n",
     "# Create a WebDriver instance for Chrome\n",
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install())\n",
+    "driver = webdriver.Chrome()\n",
     "driver.maximize_window()\n",
     "# Visit the website\n",
     "driver.get(website)"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -107,7 +107,7 @@
        "4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -130,7 +130,7 @@
        "'Required (35 units)'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -153,7 +153,7 @@
        "23"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -198,7 +198,7 @@
        " 'MSDS 699 - Machine Learning Laboratory']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -264,7 +264,7 @@
        "2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -286,7 +286,7 @@
        "'REQUEST INFO'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -340,28 +340,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "el = driver.find_element(By.XPATH, '//h2[contains(text(), \"Nine Month Practicum\")]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "InvalidSelectorException",
-     "evalue": "Message: invalid selector: Unable to locate an element with the xpath expression //h2[contains(text(), \"Nine Month Practicum\"] because of the following error:\nSyntaxError: Failed to execute 'evaluate' on 'Document': The string '//h2[contains(text(), \"Nine Month Practicum\"]' is not a valid XPath expression.\n  (Session info: chrome=116.0.5845.187); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#invalid-selector-exception\nStacktrace:\n0   chromedriver                        0x0000000102b5e65c chromedriver + 4318812\n1   chromedriver                        0x0000000102b56d00 chromedriver + 4287744\n2   chromedriver                        0x00000001027887ec chromedriver + 296940\n3   chromedriver                        0x000000010278cfa0 chromedriver + 315296\n4   chromedriver                        0x000000010278ead8 chromedriver + 322264\n5   chromedriver                        0x000000010278ec04 chromedriver + 322564\n6   chromedriver                        0x00000001027c61a0 chromedriver + 549280\n7   chromedriver                        0x00000001027fed28 chromedriver + 781608\n8   chromedriver                        0x00000001027ba178 chromedriver + 500088\n9   chromedriver                        0x00000001027bafc0 chromedriver + 503744\n10  chromedriver                        0x0000000102b1ec40 chromedriver + 4058176\n11  chromedriver                        0x0000000102b23160 chromedriver + 4075872\n12  chromedriver                        0x0000000102ae6e68 chromedriver + 3829352\n13  chromedriver                        0x0000000102b23c4c chromedriver + 4078668\n14  chromedriver                        0x0000000102afbf08 chromedriver + 3915528\n15  chromedriver                        0x0000000102b40140 chromedriver + 4194624\n16  chromedriver                        0x0000000102b402c4 chromedriver + 4195012\n17  chromedriver                        0x0000000102b504d0 chromedriver + 4261072\n18  libsystem_pthread.dylib             0x00000001b1dc606c _pthread_start + 148\n19  libsystem_pthread.dylib             0x00000001b1dc0e2c thread_start + 8\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInvalidSelectorException\u001b[0m                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m el \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mXPATH, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m//h2[contains(text(), \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNine Month Practicum\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/selenium/webdriver/remote/webdriver.py:738\u001b[0m, in \u001b[0;36mWebDriver.find_element\u001b[0;34m(self, by, value)\u001b[0m\n\u001b[1;32m    735\u001b[0m     by \u001b[38;5;241m=\u001b[39m By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR\n\u001b[1;32m    736\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[name=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 738\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexecute(Command\u001b[38;5;241m.\u001b[39mFIND_ELEMENT, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124musing\u001b[39m\u001b[38;5;124m\"\u001b[39m: by, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m: value})[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/selenium/webdriver/remote/webdriver.py:344\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    342\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[0;32m--> 344\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39merror_handler\u001b[38;5;241m.\u001b[39mcheck_response(response)\n\u001b[1;32m    345\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[1;32m    346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/selenium/webdriver/remote/errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[0;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[0;31mInvalidSelectorException\u001b[0m: Message: invalid selector: Unable to locate an element with the xpath expression //h2[contains(text(), \"Nine Month Practicum\"] because of the following error:\nSyntaxError: Failed to execute 'evaluate' on 'Document': The string '//h2[contains(text(), \"Nine Month Practicum\"]' is not a valid XPath expression.\n  (Session info: chrome=116.0.5845.187); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#invalid-selector-exception\nStacktrace:\n0   chromedriver                        0x0000000102b5e65c chromedriver + 4318812\n1   chromedriver                        0x0000000102b56d00 chromedriver + 4287744\n2   chromedriver                        0x00000001027887ec chromedriver + 296940\n3   chromedriver                        0x000000010278cfa0 chromedriver + 315296\n4   chromedriver                        0x000000010278ead8 chromedriver + 322264\n5   chromedriver                        0x000000010278ec04 chromedriver + 322564\n6   chromedriver                        0x00000001027c61a0 chromedriver + 549280\n7   chromedriver                        0x00000001027fed28 chromedriver + 781608\n8   chromedriver                        0x00000001027ba178 chromedriver + 500088\n9   chromedriver                        0x00000001027bafc0 chromedriver + 503744\n10  chromedriver                        0x0000000102b1ec40 chromedriver + 4058176\n11  chromedriver                        0x0000000102b23160 chromedriver + 4075872\n12  chromedriver                        0x0000000102ae6e68 chromedriver + 3829352\n13  chromedriver                        0x0000000102b23c4c chromedriver + 4078668\n14  chromedriver                        0x0000000102afbf08 chromedriver + 3915528\n15  chromedriver                        0x0000000102b40140 chromedriver + 4194624\n16  chromedriver                        0x0000000102b402c4 chromedriver + 4195012\n17  chromedriver                        0x0000000102b504d0 chromedriver + 4261072\n18  libsystem_pthread.dylib             0x00000001b1dc606c _pthread_start + 148\n19  libsystem_pthread.dylib             0x00000001b1dc0e2c thread_start + 8\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Nine Month Practicum'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "el = driver.find_element(By.XPATH, '//h2[contains(text(), \"Nine Month Practicum\"]')"
+    "el.text"
    ]
   },
   {
@@ -375,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -386,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -399,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -410,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -421,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -435,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -462,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -473,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -484,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -496,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
@@ -504,6 +511,15 @@
    "source": [
     "continue_button = driver.find_element(By.XPATH, value=\"//input[@value='Continue']\")\n",
     "continue_button.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.quit()"
    ]
   },
   {
