--- a/notebooks/lecture_10_decorators.ipynb
+++ b/notebooks/lecture_10_decorators.ipynb
@@ -18,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "80aaf710-f406-47e0-9e64-846dc7ccee7a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Define a higher-order function called 'apply_function' that takes a function 'func' as input.\n",
+    "# Define a higher-order function called 'apply_function' that takes \n",
+    "# a function 'func' as input.\n",
     "def apply_function(func, x):\n",
     "    result = func(x)\n",
     "    return result\n",
