--- a/notebooks/lecture_10_decorators.ipynb
+++ b/notebooks/lecture_10_decorators.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "89c8839b-7e19-4f45-a027-51dba272b0f3",
    "metadata": {
     "tags": []
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "19822023-5fad-4fb8-812e-0b35439119de",
    "metadata": {
     "tags": []
@@ -283,9 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "multiply\n",
       "Result: 15\n",
-      "multiply\n",
       "Error: All arguments must be positive integers.\n"
      ]
     }
@@ -312,9 +310,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a838e76-a404-4297-8456-7de49054a21e",
+   "metadata": {},
+   "source": [
+    "## try and except\n",
+    "In Python, try and except are used to handle exceptions, which are runtime errors. The try block is used to enclose the code that might raise an exception, and the except block is used to specify how to handle the exception if it occurs. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a909cbbe-d0fa-45bb-adfd-131437fa7017",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An exception occurred\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # Code that may raise an exception\n",
+    "    result = 10 / 0  # This will raise a ZeroDivisionError\n",
+    "except:\n",
+    "    # Code to handle the exception\n",
+    "    print(\"An exception occurred\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd96e719-7d6b-4f03-8d49-c5b3a2fbb068",
+   "metadata": {},
+   "source": [
+    "### raise\n",
+    "\n",
+    "\n",
+    "### ValueError\n",
+    "Python ValueError is raised when a function receives an argument of the correct type but an inappropriate value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b51f221-358b-4483-91d7-8da2566955e4",
+   "id": "af63a441-b4f3-4086-ae39-392dfe163d04",
    "metadata": {},
    "outputs": [],
    "source": []
