--- a/notebooks/lecture_11_api_key.ipynb
+++ b/notebooks/lecture_11_api_key.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "id": "64072332-1949-4210-893e-a4445abb1596",
    "metadata": {
     "tags": []
@@ -165,7 +165,7 @@
     "api_key = ! cat ~/.keys/ombd_key\n",
     "\n",
     "args = {\n",
-    "   'i' : 'tt0110912', # search  \n",
+    "   'i' : 'tt0110912', # search by id  \n",
     "   'r' : 'json', # output type\n",
     "   'apikey' : api_key  # api key\n",
     "}"
