--- a/notebooks/lecture_11_open_api.ipynb
+++ b/notebooks/lecture_11_open_api.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "88d62125-f57e-4ba4-ac9f-39fa45eeb67e",
    "metadata": {
     "tags": []
@@ -83,7 +83,7 @@
        "'[{\"word\":\"science\",\"phonetic\":\"/ˈsaɪəns/\",\"phonetics\":[{\"text\":\"/ˈsaɪəns/\",\"audio\":\"https://api.dictionaryapi.dev/media/pronunciations/en/science-1-ca.mp3\",\"sourceUrl\":\"https://commons.wikimedia.org/w'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,87 @@
     "import json\n",
     "\n",
     "r = requests.get('https://api.dictionaryapi.dev/api/v2/entries/en_US/science')\n",
+    "data = json.loads(r.text)\n",
     "r.text[0:200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f315be52-91d7-47b8-b71c-575090b9ab23",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'word': 'science',\n",
+       " 'phonetic': '/ˈsaɪəns/',\n",
+       " 'phonetics': [{'text': '/ˈsaɪəns/',\n",
+       "   'audio': 'https://api.dictionaryapi.dev/media/pronunciations/en/science-1-ca.mp3',\n",
+       "   'sourceUrl': 'https://commons.wikimedia.org/w/index.php?curid=189581',\n",
+       "   'license': {'name': 'BY-SA 3.0',\n",
+       "    'url': 'https://creativecommons.org/licenses/by-sa/3.0'}},\n",
+       "  {'text': '/ˈsaɪəns/',\n",
+       "   'audio': 'https://api.dictionaryapi.dev/media/pronunciations/en/science-1-us.mp3',\n",
+       "   'sourceUrl': 'https://commons.wikimedia.org/w/index.php?curid=189574',\n",
+       "   'license': {'name': 'BY-SA 3.0',\n",
+       "    'url': 'https://creativecommons.org/licenses/by-sa/3.0'}}],\n",
+       " 'meanings': [{'partOfSpeech': 'noun',\n",
+       "   'definitions': [{'definition': 'A particular discipline or branch of learning, especially one dealing with measurable or systematic principles rather than intuition or natural ability.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': [],\n",
+       "     'example': 'Of course in my opinion Social Studies is more of a science than an art.'},\n",
+       "    {'definition': 'Specifically the natural sciences.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': [],\n",
+       "     'example': 'My favorite subjects at school are science, mathematics, and history.'},\n",
+       "    {'definition': 'Knowledge gained through study or practice; mastery of a particular discipline or area.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': []},\n",
+       "    {'definition': 'The fact of knowing something; knowledge or understanding of a truth.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': []},\n",
+       "    {'definition': 'The collective discipline of study or learning acquired through the scientific method; the sum of knowledge gained from such methods and discipline.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': []},\n",
+       "    {'definition': 'Knowledge derived from scientific disciplines, scientific method, or any systematic effort.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': []},\n",
+       "    {'definition': '(collective) The scientific community.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': []}],\n",
+       "   'synonyms': ['sci', 'sci.'],\n",
+       "   'antonyms': []},\n",
+       "  {'partOfSpeech': 'verb',\n",
+       "   'definitions': [{'definition': 'To cause to become versed in science; to make skilled; to instruct.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': []},\n",
+       "    {'definition': 'To use science to solve a problem.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': []}],\n",
+       "   'synonyms': [],\n",
+       "   'antonyms': []},\n",
+       "  {'partOfSpeech': 'noun',\n",
+       "   'definitions': [{'definition': 'The sport of boxing.',\n",
+       "     'synonyms': [],\n",
+       "     'antonyms': []}],\n",
+       "   'synonyms': [],\n",
+       "   'antonyms': []}],\n",
+       " 'license': {'name': 'CC BY-SA 3.0',\n",
+       "  'url': 'https://creativecommons.org/licenses/by-sa/3.0'},\n",
+       " 'sourceUrls': ['https://en.wiktionary.org/wiki/science',\n",
+       "  'https://en.wiktionary.org/wiki/sweet%20science']}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]"
    ]
   },
   {
@@ -242,7 +322,7 @@
    "id": "dc2a0f2a-d1fe-493b-85fe-0311d2bb4b20",
    "metadata": {},
    "source": [
-    "**Exercise**:  Print out the origin of the word science from that JSON."
+    "**Exercise**:  Print all definitions of the word science from that JSON."
    ]
   },
   {
@@ -266,17 +346,16 @@
     "\n",
     "```\n",
     "URL = f\"https://datausa.io/api/data?drilldowns={level}&measures={measures}&year={year}\" # for some level, measure, and year.\n",
-    "```\n",
-    "**Exercise**: Use `curl` to get population data at the national level for the latest year that data was collected.\n",
-    "\n",
-    "Here's how to fetch the data for the latest year that data was collected:"
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "id": "21a520de",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -299,6 +378,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7d3ab3ef-04dc-47fc-9e78-eb554ecb1466",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ID Nation': '01000US',\n",
+       "  'Nation': 'United States',\n",
+       "  'ID Year': 2020,\n",
+       "  'Year': '2020',\n",
+       "  'Population': 326569308,\n",
+       "  'Slug Nation': 'united-states'}]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['data']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b76d20bb",
    "metadata": {},
@@ -308,9 +415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "5f73eb91",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -341,9 +450,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "19558075",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -362,7 +473,7 @@
        "  'Slug Nation': 'united-states'}]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,9 +493,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "id": "482abdbf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -443,6 +556,51 @@
        "      <td>322903030</td>\n",
        "      <td>united-states</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01000US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>321004407</td>\n",
+       "      <td>united-states</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01000US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>318558162</td>\n",
+       "      <td>united-states</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>01000US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>316515021</td>\n",
+       "      <td>united-states</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>01000US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>314107084</td>\n",
+       "      <td>united-states</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>01000US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>311536594</td>\n",
+       "      <td>united-states</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -451,17 +609,22 @@
        "  ID Nation         Nation  ID Year  Year  Population    Slug Nation\n",
        "0   01000US  United States     2020  2020   326569308  united-states\n",
        "1   01000US  United States     2019  2019   324697795  united-states\n",
-       "2   01000US  United States     2018  2018   322903030  united-states"
+       "2   01000US  United States     2018  2018   322903030  united-states\n",
+       "3   01000US  United States     2017  2017   321004407  united-states\n",
+       "4   01000US  United States     2016  2016   318558162  united-states\n",
+       "5   01000US  United States     2015  2015   316515021  united-states\n",
+       "6   01000US  United States     2014  2014   314107084  united-states\n",
+       "7   01000US  United States     2013  2013   311536594  united-states"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame.from_dict(results).head(3)"
+    "pd.DataFrame.from_dict(results)"
    ]
   },
   {
