add sample test

--- a/notebooks/sample_test.ipynb
+++ b/notebooks/sample_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c409f80c-1274-4232-940e-34b064816c27",
    "metadata": {
     "tags": []
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "162753a2-5785-42c1-a6f1-e5a2be7ff49c",
    "metadata": {
     "tags": []
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c44dd29d-624c-47c3-a059-836e1b90ae93",
    "metadata": {
     "tags": []
@@ -44,7 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "6e89bfd0-5d78-4064-9087-f1ab9ef2fa22",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# complete this code here\n",
+    "listing = driver.find_elements(By.XPATH, '//div')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b103f2b8-b876-48e9-865e-d2aa892ee110",
    "metadata": {
     "tags": []
