--- a/notebooks/sample_test.ipynb
+++ b/notebooks/sample_test.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c44dd29d-624c-47c3-a059-836e1b90ae93",
    "metadata": {
     "tags": []
@@ -52,12 +52,12 @@
    "outputs": [],
    "source": [
     "# complete this code here\n",
-    "listing = driver.find_elements(By.XPATH, '//div')"
+    "listing = driver.find_elements(By.XPATH, '   ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b103f2b8-b876-48e9-865e-d2aa892ee110",
    "metadata": {
     "tags": []
