--- a/notebooks/lecture_12_real_state_model.ipynb
+++ b/notebooks/lecture_12_real_state_model.ipynb
@@ -958,6 +958,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3b66c5b-b870-4854-b294-8efac99d12d7",
+   "metadata": {},
+   "source": [
+    "### Task 4:\n",
+    "In this task we will experiment with individual words that might be useful. For example the word balcony (balcon, balcones) could be very useful.\n",
+    "\n",
+    "Provide a set of words, such as [\"balcón\", \"balcon\", \"balcones\"], introduce a feature that calculates the presence or absence of these words in the description.\n",
+    "\n",
+    "Write functions that will make it easier to add more words. Here are other potentially useful set of words: `[\"doble\", \"dobles\"], [\"exterior\", \"exteriores\"], [\"interior\", \"interiores\"]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "30e12453-897d-4d89-8d7a-87f46a28777a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "key_words = [\"balcón\", \"balcon\", \"balcones\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "30bfea83-5253-4fab-82e8-8b55bf07238d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9041579-c13f-438a-a9a7-70e421fd0f41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4f0b9f8-e1ef-4233-b1cb-63f2e314d323",
+   "metadata": {},
+   "source": [
+    "### Other models\n",
+    "Can you experiment with Gradient Boosting? Do you get better results?\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingRegressor.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2ac94d53-420d-435a-a525-2346d8b60184",
    "metadata": {},
    "source": [
@@ -1165,14 +1220,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cf4b1817-22f9-4a6a-bc9f-4fdf2b980f6a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 209,
    "id": "5de48328-1781-458d-bbcc-978290e806d8",
    "metadata": {
@@ -1208,9 +1255,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9283a9f-7f43-477b-aada-961c9d908672",
+   "metadata": {},
+   "source": [
+    "### Task 5:\n",
+    "Find most overvalued properties according to this model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b5e9bd-7bb7-48fb-ab84-dc4336d95606",
+   "id": "45e24a27-26f6-4852-9e6d-fdda3c069551",
    "metadata": {},
    "outputs": [],
    "source": []
