adding lecture 13 notebook

--- a/notebooks/lecture_13_sentiment_gpt.ipynb
+++ b/notebooks/lecture_13_sentiment_gpt.ipynb
@@ -19,29 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_openai_key = \"/Users/yannetinterian/.openai_key\"\n",
+    "file_openai_key = \"/Users/yinterian/.openai_key\"\n",
     "key = open(file_openai_key, \"r\").read().strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "ef46a4a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'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'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "key"
    ]
   },
   {
@@ -78,8 +57,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "labeledBow.feat  \u001b[34mpos\u001b[m\u001b[m/             unsupBow.feat    urls_pos.txt\r\n",
-      "\u001b[34mneg\u001b[m\u001b[m/             \u001b[34munsup\u001b[m\u001b[m/           urls_neg.txt     urls_unsup.txt\r\n"
+      "labeledBow.feat  \u001b[34mpos\u001b[m\u001b[m/             unsupBow.feat    urls_pos.txt\n",
+      "\u001b[34mneg\u001b[m\u001b[m/             \u001b[34munsup\u001b[m\u001b[m/           urls_neg.txt     urls_unsup.txt\n"
      ]
     }
    ],
@@ -697,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
