--- a/notebooks/lecture_13_sentiment_gpt.ipynb
+++ b/notebooks/lecture_13_sentiment_gpt.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "424dfbc5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -14,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "e29d9bce",
    "metadata": {
     "tags": []
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "d72037b0",
    "metadata": {
     "tags": []
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "4a0d6192-a652-4c56-9b05-dc790d37e195",
    "metadata": {
     "tags": []
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "id": "64b7079e-f6e8-4e12-a4c8-9f6ebd50f1fc",
    "metadata": {
     "tags": []
@@ -95,7 +97,7 @@
        "'Suggest three names for an animal that\\n    is a superhero.\\n    Animal: Cat\\n    Names: Captain Sharpclaw, Agent Fluffball,\\n           The Incredible Feline\\n    Animal: Dog\\n    Names: Ruff the Protector, Wonder Canine, Sir Barks-a-Lot\\n    Animal: Parrot\\n    Names:'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "id": "14a29054-8475-40b8-8203-87af64c0203f",
    "metadata": {
     "tags": []
@@ -118,13 +120,13 @@
     "response = openai.Completion.create(\n",
     "  model=\"gpt-3.5-turbo-instruct\",\n",
     "  prompt=generate_prompt(animal),\n",
-    "  temperature=0.6\n",
+    "  temperature=0.1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "id": "d04432f5-502c-4766-b0bb-4af09fe2e250",
    "metadata": {
     "tags": []
@@ -133,51 +135,29 @@
     {
      "data": {
       "text/plain": [
-       "' Feathered Avenger, Polly Power, The Mighty Macaw '"
+       "' Feathered Avenger, Polly Power, The Mighty Macaw'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response\n",
     "response[\"choices\"][0][\"text\"]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "142d186e-af2e-458a-8e40-50f07282e189",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "0677ae7a-24ec-4fde-a763-1539dcdb2034",
+   "metadata": {},
    "source": [
-    "def generate_prompt(text):\n",
-    "    promp = \"\"\"\n",
-    "    You will be provided with unstructured data, \n",
-    "    and your task is to parse it into CSV format.\n",
-    "    {}\"\"\".format(text)\n",
-    "    return promp"
+    "### Jokes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "12c9ae22-d7f1-4aa9-9cc8-19ae3f187d47",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "text = \"There are many fruits that were found on the recently discovered planet Goocrux. There are neoskizzles that grow there, which are purple and taste like candy. There are also loheckles, which are a grayish blue fruit and are very tart, a little bit like a lemon. Pounits are a bright green color and are more savory than sweet. There are also plenty of loopnovas which are a neon pink flavor and taste like cotton candy. Finally, there are fruits called glowls, which have a very sour and bitter taste which is acidic and caustic, and a pale orange tinge to them.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "id": "1317e714-e676-488b-b54b-1e53072b1c9c",
    "metadata": {
     "tags": []
@@ -186,14 +166,16 @@
    "source": [
     "messages = [\n",
     "    {\"role\": \"user\", \"content\": \"Tell me a joke.\"},\n",
-    "    {\"role\": \"assistant\", \"content\": \"Why did the chicken cross the road?\"},\n",
-    "    {\"role\": \"user\", \"content\": \"I don't know, why did the chicken cross the road?\"}\n",
+    "    {\"role\": \"assistant\", \"content\": \"Why did the chicken \\\n",
+    "    cross the road?\"},\n",
+    "    {\"role\": \"user\", \"content\": \"I don't know, \\\n",
+    "     why did the chicken cross the road?\"}\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "id": "92158779-7fd6-4f29-885a-ccd705f78783",
    "metadata": {
     "tags": []
@@ -204,14 +186,14 @@
     "    response = openai.ChatCompletion.create(\n",
     "        model=\"gpt-3.5-turbo\",\n",
     "        messages=messages,\n",
-    "        temperature=0.5, \n",
+    "        temperature=0.9, \n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    return response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "728fff3e-e6b0-4e00-ae19-a6be8af2c27f",
    "metadata": {
     "tags": []
@@ -223,13 +205,13 @@
        "'To get to the other side!'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_completion(messages)"
+    "get_completion(messages)[\"choices\"][0][\"message\"][\"content\"]"
    ]
   },
   {
